--- a/menu/about/index.html
+++ b/menu/about/index.html
@@ -174,21 +174,21 @@
 
 		
 
-		<link rel="modulepreload" href="/./_app/start-3a9e7a26.js">
+		<link rel="modulepreload" href="/./_app/start-52a66547.js">
 		<link rel="modulepreload" href="/./_app/chunks/vendor-c3741222.js">
 		<link rel="modulepreload" href="/./_app/chunks/paths-7dc55c62.js">
 		<link rel="modulepreload" href="/./_app/pages/__layout.svelte-7c88882b.js">
 		<link rel="modulepreload" href="/./_app/chunks/tick-cf308ed2.js">
 		<link rel="modulepreload" href="/./_app/pages/menu/__layout.svelte-95ef0bd8.js">
 		<link rel="modulepreload" href="/./_app/chunks/TopBar-e1b953c3.js">
-		<link rel="modulepreload" href="/./_app/pages/menu/about.svelte-5d196bfb.js">
+		<link rel="modulepreload" href="/./_app/pages/menu/about.svelte-a5226889.js">
 		<link rel="modulepreload" href="/./_app/chunks/Separator-947fe102.js">
 		<link rel="stylesheet" href="/./_app/assets/start-8077b9bf.css">
 		<link rel="stylesheet" href="/./_app/assets/pages/__layout.svelte-50c5ce28.css">
 		<link rel="stylesheet" href="/./_app/assets/TopBar-5de6adb8.css">
 
 		<script type="module">
-			import { start } from "/./_app/start-3a9e7a26.js";
+			import { start } from "/./_app/start-52a66547.js";
 			start({
 				target: document.querySelector("#svelte"),
 				paths: {"base":"","assets":"/."},
@@ -203,7 +203,7 @@
 					nodes: [
 						import("/./_app/pages/__layout.svelte-7c88882b.js"),
 						import("/./_app/pages/menu/__layout.svelte-95ef0bd8.js"),
-						import("/./_app/pages/menu/about.svelte-5d196bfb.js")
+						import("/./_app/pages/menu/about.svelte-a5226889.js")
 					],
 					page: {
 						host: location.host, // TODO this is redundant
@@ -229,8 +229,7 @@
 </div>
 	<div class="px-4 overflow-y-scroll inline-flex gap-2 text-xl flex-col items-stretch w-full" style="height: 76vh"><div class="inline-flex flex-col text-base items-center pt-4 gap-2 w-full"><p class="text-2xl font-bold">by Suaveware</p>
 <p class="text-justify">Este aplicativo é de código livre sob a licença GPL-3 e seu código fonte está disponível neste
-	<a class="underline" href="https://github.com/luizcarlos1405/pronto">repositório no Github
-	</a>
+	<a class="underline" href="https://github.com/suaveware/pronto">repositório no Github </a>
 	.
 </p>
 <p class="text-justify">Distribuído como <i>progressive web app</i> (PWA) através do endereço:
